<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/xiketic"
    android:backgroundTint="@color/cardview_shadow_start_color"
    android:layout_marginBottom="10dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/termContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/cyan_process"
        android:padding="4dp"

        >


        <TextView
            android:id="@+id/termTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/term_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/termStart"
            android:text="@string/_label" />

        <TextView
            android:id="@+id/termStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:text="@string/dd_mm_yyyy"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/dateLabelEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/tStart"
            android:layout_alignEnd="@id/tStart"

            android:text="@string/end_date_label" />

        <TextView
            android:id="@+id/termEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/termStart"
            android:text="@string/dateFormatStringLabel"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>