<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tech.school.schoolapp.activity.TermDetailsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar_alt"/>

    <TextView
        android:id="@+id/termTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/termTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/term_title"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toEndOf="@id/termTitleLabel"
        />

    <TextView
        android:id="@+id/termStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/start_date_label"
        app:layout_constraintTop_toBottomOf="@id/termTitleLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/termStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:textSize="20sp"
        android:text="@string/dd_mm_yyyy"
        app:layout_constraintTop_toBottomOf="@id/termTitleDetail"
        app:layout_constraintStart_toEndOf="@id/termStartLabel"/>

    <TextView
        android:id="@+id/termEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/end_date_label"
        app:layout_constraintTop_toBottomOf="@id/termStartLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/termEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/dd_mm_yyyy"
        app:layout_constraintTop_toBottomOf="@id/termStart"
        app:layout_constraintStart_toEndOf="@id/termEndLabel"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/delete_button_label"
        android:onClick="onDeleteClick"
        android:background="@color/red"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/editButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        android:text="@string/edit_button_text"
        android:onClick="onEditClick"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/courseListCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/termEnd"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/courseListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>