<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tech.school.schoolapp.activity.AddTermActivity">


    <include
        android:id="@+id/toolbarAlt"
        layout="@layout/tool_bar_alt"/>

    <TextView
        android:id="@+id/termTitle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/term_title_add_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/termTitleInput"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"

        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/termStartDateLabel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/term_start_date_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termTitle"/>
    <EditText
        android:id="@+id/termStartDateInput"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:inputType="date"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termTitleInput"
        android:autofillHints="dd/MM/yyyy" />
    <TextView
        android:id="@+id/termEndDateLabel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/term_end_date_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termStartDateLabel"/>
    <EditText
        android:id="@+id/termEndDateInput"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="date"

        android:layout_marginTop="40dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termStartDateInput"
        android:autofillHints="dd/MM/yyyy" />
    <Button
        android:id="@+id/cancelButton"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/cancel_button_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termEndDateLabel"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:text="@string/save_button_text"
        android:onClick="saveTermClick"
        android:textColor="@color/white"
        android:background="@color/blue_sapphire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termEndDateInput"/>



</androidx.constraintlayout.widget.ConstraintLayout>