<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/cardview_light_background"
    android:layout_marginBottom="14dp"
>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan_process"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/itemIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="2dp"
                app:tint="@color/xiketic"
                />

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/itemIcon"
                android:text="@string/course_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/courseTitle"
                android:textColor="@android:color/black"

                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/itemIcon"
                android:text="@string/instructor_info"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/startDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="100dp"
                android:text="@string/start_date_label"
                />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/black"

                android:text="@string/start_date_label" />

        </RelativeLayout>


</androidx.cardview.widget.CardView>